release 1.0.1 (2008-11/12)
- The following classes in jersey-core have moved:
  - The following classes in package "com.sun.jersey.api" have moved to
    the package "com.sun.jersey.core.header": InBoundHeaders, MediaTypes and
    OutBoundHeaders.
  - The following classe in package "com.sun.jersey.api" have moved to
    the package "com.sun.jersey.core.util": MultivaluedMapImpl.
- The Spring servlet automatically registers Spring-based classes (declared
  via the XML configuration or autowiring) and no configuration via the web.xml
  servlet initialization parameters is required unless non-Spring managed
  classes also need to be registered.
- Fixed issue 141
  https://jersey.dev.java.net/issues/show_bug.cgi?id=141
  A request filter can modify the request URI.
- Fixed issue 88
  https://jersey.dev.java.net/issues/show_bug.cgi?id=88
  @PostConstruct and @PreDestroy are supported on resource and provider
  classes.
- Fixed issue 136
  https://jersey.dev.java.net/issues/show_bug.cgi?id=136
  Improved error messages when building a URI from classes/methods that are not
  annotated with @Path.
- Fixed issue 140
  https://jersey.dev.java.net/issues/show_bug.cgi?id=140
  The full functionality of the client API can be used independently of the
  server side and requires no dependency on server-based artificats.
- Fixed and improved support for the selection of the most acceptable media type
  used for the content type when the application declares @Produces on a class
  or a resource method.
- Fix for issue 138
  https://jersey.dev.java.net/issues/show_bug.cgi?id=138
  When the application does not declare a media type as the content type of
  a response then the type is selected from the acceptable headers given
  the list of message body writers, what they produce and an acceptable
  media type is writable.
- Fix for issue 139
  https://jersey.dev.java.net/issues/show_bug.cgi?id=139
  The media types in the accept header are ordered using the quality 