@@ -41,6 +41,8 @@ import com.sun.net.httpserver.HttpHandler;
 import com.sun.net.httpserver.HttpServer;
 import com.sun.net.httpserver.HttpsServer;
 import com.sun.jersey.api.container.ContainerFactory;
+import com.sun.jersey.api.core.ResourceConfig;
+import com.sun.jersey.core.spi.component.ioc.IoCComponentProviderFactory;
 import java.io.IOException;
 import java.net.InetSocketAddress;
 import java.net.URI;
@@ -111,7 +113,127 @@ public final class HttpServerFactory {
             throws IOException, IllegalArgumentException {
         return create(u, ContainerFactory.createContainer(HttpHandler.class));
     }
-    
+
+    /**
+     * Create a {@link HttpServer} that registers a HttpHandler that
+     * in turn manages all root resource and provder classes declared by the
+     * resource configuration.
+     * <p>
+     * This implementation defers to the
+     * {@link ContainerFactory#createContainer(Class, ResourceConfig)} method
+     * for creating an HttpHandler that manages the root resources.
+     *
+     * @param u the URI to create the http server. The URI scheme must be
+     *        equal to "http" or "https". The URI user information and host
+     *        are ignored If the URI port is not present then port 80 will be
+     *        used. The URI path must not be null or an empty string, and must
+     *        not absolute (start with a '/' character). The URI path is used
+     *        as the context of the HTTP handler (and corresponds to the base
+     *        path). The URI query and fragment components are ignored.
+     * @param rc the resource configuration.
+     * @return the http server
+     * @throws IOException if an error occurs creating the container.
+     * @throws IllegalArgumentException if <code>u</code> is null
+     */
+    public static HttpServer create(String u, ResourceConfig rc)
+            throws IOException, IllegalArgumentException {
+        if (u == null)
+            throw new IllegalArgumentException("The URI must not be null");
+
+        return create(URI.create(u), rc);
+    }
+
+    /**
+     * Create a {@link HttpServer} that registers a HttpHandler that
+     * in turn manages all root resource and provder classes declared by the
+     * resource configuration.
+     * <p>
+     * This implementation defers to the
+     * {@link ContainerFactory#createContainer(Class, ResourceConfig)} method
+     * for creating an HttpHandler that manages the root resources.
+     *
+     * @param u the URI to create the http server. The URI scheme must be
+     *        equal to "http" or "https". The URI user information and host
+     *        are ignored If the URI port is not present then port 80 will be
+     *        used. The URI path must not be null or an empty string, and must
+     *        not absolute (start with a '/' character). The URI path is used
+     *        as the context of the HTTP handler (and corresponds to the base
+     *        path). The URI query and fragment components are ignored.
+     * @param rc the resource configuration.
+     * @return the http server
+     * @throws IOException if an error occurs creating the container.
+     * @throws IllegalArgumentException if <code>u</code> is null
+     */
+    public static HttpServer create(URI u, ResourceConfig rc)
+            throws IOException, IllegalArgumentException {
+        return create(u, ContainerFactory.createContainer(HttpHandler.class, rc));
+    }
+
+    /**
+     * Create a {@link HttpServer} that registers a HttpHandler that
+     * in turn manages all root resource and provder classes declared by the
+     * resource configuration.
+     * <p>
+     * This implementation defers to the
+     * {@link ContainerFactory#createContainer(Class, ResourceConfig)} method
+     * for creating an HttpHandler that manages the root resources.
+     *
+     * @param u the URI to create the http server. The URI scheme must be
+     *        equal to "http" or "https". The URI user information and host
+     *        are ignored If the URI port is not present then port 80 will be
+     *        used. The URI path must not be null or an empty string, and must
+     *        not absolute (start with a '/' character). The URI path is used
+     *        as the context of the HTTP handler (and corresponds to the base
+     *        path). The URI query and fragment components are ignored.
+     * @param rc the resource configuration.
+     * @param factory the IoC component provider factory the web application
+     *        delegates to for obtaining instances of resource and provider
+     *        classes. May be null if the web application is responsible for
+     *        instantiating resource and provider classes.
+     * @return the http server
+     * @throws IOException if an error occurs creating the container.
+     * @throws IllegalArgumentException if <code>u</code> is null
+     */
+    public static HttpServer create(String u, ResourceConfig rc,
+            IoCComponentProviderFactory factory)
+            throws IOException, IllegalArgumentException {
+        if (u == null)
+            throw new IllegalArgumentException("The URI must not be null");
+
+        return create(URI.create(u), rc, factory);
+    }
+
+    /**
+     * Create a {@link HttpServer} that registers a HttpHandler that
+     * in turn manages all root resource and provder classes declared by the
+     * resource configuration.
+     * <p>
+     * This implementation defers to the
+     * {@link ContainerFactory#createContainer(Class, ResourceConfig)} method
+     * for creating an HttpHandler that manages the root resources.
+     *
+     * @param u the URI to create the http server. The URI scheme must be
+     *        equal to "http" or "https". The URI user information and host
+     *        are ignored If the URI port is not present then port 80 will be
+     *        used. The URI path must not be null or an empty string, and must
+     *        not absolute (start with a '/' character). The URI path is used
+     *        as the context of the HTTP handler (and corresponds to the base
+     *        path). The URI query and fragment components are ignored.
+     * @param rc the resource configuration.
+     * @param factory the IoC component provider factory the web application
+     *        delegates to for obtaining instances of resource and provider
+     *        classes. May be null if the web application is responsible for
+     *        instantiating resource and provider classes.
+     * @return the http server
+     * @throws IOException if an error occurs creating the container.
+     * @throws IllegalArgumentException if <code>u</code> is null
+     */
+    public static HttpServer create(URI u, ResourceConfig rc,
+            IoCComponentProviderFactory factory)
+            throws IOException, IllegalArgumentException {
+        return create(u, ContainerFactory.createContainer(HttpHandler.class, rc, factory));
+    }
+
     /**
      * Create a {@link HttpServer} that registers a HttpHandler that in turn
      * manages all root resource classes found by searching the classes
